--- a/src/index.less
+++ b/src/index.less
@@ -107,3 +107,36 @@
 /*    background-color: #f9f9f9;*/
 /*  }*/
 /*}*/
+/* start--文本行数限制--start */
+.u-line-1 {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.u-line-2 {
+  -webkit-line-clamp: 2;
+}
+
+.u-line-3 {
+  -webkit-line-clamp: 3;
+}
+
+.u-line-4 {
+  -webkit-line-clamp: 4;
+}
+
+.u-line-5 {
+  -webkit-line-clamp: 5;
+}
+
+.u-line-2,
+.u-line-3,
+.u-line-4,
+.u-line-5 {
+  overflow: hidden;
+  word-break: break-all;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+}
